// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BooleanWidget > renders checked 1`] = `
<div>
  <div
    class="p-checkbox p-component p-checkbox-checked blong-boolean"
  >
    <div
      class="p-hidden-accessible"
    >
      <input
        checked=""
        id="testField"
        type="checkbox"
      />
    </div>
    <div
      class="p-checkbox-box p-highlight"
    >
      <span
        class="p-checkbox-icon p-c pi pi-check"
      />
    </div>
  </div>
</div>
`;

exports[`BooleanWidget > renders disabled 1`] = `
<div>
  <div
    class="p-checkbox p-component p-checkbox-disabled blong-boolean"
  >
    <div
      class="p-hidden-accessible"
    >
      <input
        disabled=""
        id="testField"
        type="checkbox"
      />
    </div>
    <div
      class="p-checkbox-box p-disabled"
    >
      <span
        class="p-checkbox-icon p-c"
      />
    </div>
  </div>
</div>
`;

exports[`BooleanWidget > renders unchecked 1`] = `
<div>
  <div
    class="p-checkbox p-component blong-boolean"
  >
    <div
      class="p-hidden-accessible"
    >
      <input
        id="testField"
        type="checkbox"
      />
    </div>
    <div
      class="p-checkbox-box"
    >
      <span
        class="p-checkbox-icon p-c"
      />
    </div>
  </div>
</div>
`;

exports[`CurrencyWidget > renders 1`] = `
<div>
  <span
    class="p-inputnumber p-component p-inputwrapper blong-currency w-full "
  >
    <input
      class="p-inputtext p-component p-filled p-inputnumber-input text-right"
      id="testField"
      inputmode="decimal"
      name="testField"
      role="spinbutton"
      type="text"
      value="0"
    />
  </span>
</div>
`;

exports[`CurrencyWidget > renders with value 1`] = `
<div>
  <span
    class="p-inputnumber p-component p-inputwrapper p-inputwrapper-filled blong-currency w-full "
  >
    <input
      aria-valuenow="99.99"
      class="p-inputtext p-component p-filled p-inputnumber-input text-right"
      id="testField"
      inputmode="decimal"
      name="testField"
      role="spinbutton"
      type="text"
      value="99.99"
    />
  </span>
</div>
`;

exports[`DateTimeWidget > renders 1`] = `
<div>
  <span
    class="p-calendar p-component p-inputwrapper blong-datetime w-full  p-calendar-w-btn p-calendar-w-btn-right"
  >
    <input
      autocomplete="off"
      class="p-inputtext p-component"
      id="testField"
      type="text"
    />
    <button
      class="p-button p-component p-datepicker-trigger p-button-icon-only"
      tabindex="-1"
      type="button"
    >
      <span
        class="p-button-icon p-c pi pi-calendar"
      />
      <span
        class="p-button-label p-c"
      >
         
      </span>
    </button>
  </span>
</div>
`;

exports[`DateWidget > renders 1`] = `
<div>
  <span
    class="p-calendar p-component p-inputwrapper blong-date w-full  p-calendar-w-btn p-calendar-w-btn-right"
  >
    <input
      autocomplete="off"
      class="p-inputtext p-component"
      id="testField"
      type="text"
    />
    <button
      class="p-button p-component p-datepicker-trigger p-button-icon-only"
      tabindex="-1"
      type="button"
    >
      <span
        class="p-button-icon p-c pi pi-calendar"
      />
      <span
        class="p-button-label p-c"
      >
         
      </span>
    </button>
  </span>
</div>
`;

exports[`DateWidget > renders readOnly 1`] = `
<div>
  <span
    class="p-calendar p-component p-inputwrapper blong-date w-full  p-calendar-w-btn p-calendar-w-btn-right p-calendar-disabled p-inputwrapper-filled"
  >
    <input
      autocomplete="off"
      class="p-inputtext p-component p-disabled p-filled"
      disabled=""
      id="testField"
      readonly=""
      type="text"
    />
    <button
      class="p-button p-component p-datepicker-trigger p-button-icon-only p-disabled"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="p-button-icon p-c pi pi-calendar"
      />
      <span
        class="p-button-label p-c"
      >
         
      </span>
    </button>
  </span>
</div>
`;

exports[`DateWidget > renders with value 1`] = `
<div>
  <span
    class="p-calendar p-component p-inputwrapper blong-date w-full  p-calendar-w-btn p-calendar-w-btn-right p-inputwrapper-filled"
  >
    <input
      autocomplete="off"
      class="p-inputtext p-component p-filled"
      id="testField"
      type="text"
    />
    <button
      class="p-button p-component p-datepicker-trigger p-button-icon-only"
      tabindex="-1"
      type="button"
    >
      <span
        class="p-button-icon p-c pi pi-calendar"
      />
      <span
        class="p-button-label p-c"
      >
         
      </span>
    </button>
  </span>
</div>
`;

exports[`DropdownWidget > renders readOnly 1`] = `
<div>
  <span
    class="blong-display"
  >
    B label
  </span>
</div>
`;

exports[`DropdownWidget > renders with static options 1`] = `
<div>
  <div
    class="p-dropdown p-component p-inputwrapper p-dropdown-clearable p-inputwrapper-filled blong-dropdown w-full "
    data-testid="testField"
  >
    <div
      class="p-hidden-accessible"
    >
      <input
        aria-haspopup="listbox"
        id="testField"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="p-hidden-accessible p-dropdown-hidden-select"
    >
      <select
        aria-hidden="true"
        tabindex="-1"
      >
        <option
          selected=""
          value="a"
        >
          Option A
        </option>
      </select>
    </div>
    <span
      class="p-dropdown-label p-inputtext"
    >
      Option A
    </span>
    <i
      class="p-dropdown-clear-icon pi pi-times"
    />
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Select…"
      class="p-dropdown-trigger"
      role="button"
    >
      <span
        class="p-dropdown-trigger-icon p-clickable pi pi-chevron-down"
      />
    </div>
  </div>
</div>
`;

exports[`IntegerWidget > renders 1`] = `
<div>
  <span
    class="p-inputnumber p-component p-inputwrapper p-inputnumber-buttons-stacked blong-integer w-full "
  >
    <input
      class="p-inputtext p-component p-filled p-inputnumber-input w-full text-right"
      id="testField"
      inputmode="numeric"
      name="testField"
      role="spinbutton"
      type="text"
      value="0"
    />
    <span
      class="p-inputnumber-button-group"
    >
      <button
        class="p-inputnumber-button p-inputnumber-button-up p-button p-button-icon-only p-component"
        tabindex="-1"
        type="button"
      >
        <span
          class="p-button-icon pi pi-angle-up"
        />
      </button>
      <button
        class="p-inputnumber-button p-inputnumber-button-down p-button p-button-icon-only p-component"
        tabindex="-1"
        type="button"
      >
        <span
          class="p-button-icon pi pi-angle-down"
        />
      </button>
    </span>
  </span>
</div>
`;

exports[`IntegerWidget > renders with value 1`] = `
<div>
  <span
    class="p-inputnumber p-component p-inputwrapper p-inputwrapper-filled p-inputnumber-buttons-stacked blong-integer w-full "
  >
    <input
      aria-valuenow="7"
      class="p-inputtext p-component p-filled p-inputnumber-input w-full text-right"
      id="testField"
      inputmode="numeric"
      name="testField"
      role="spinbutton"
      type="text"
      value="7"
    />
    <span
      class="p-inputnumber-button-group"
    >
      <button
        class="p-inputnumber-button p-inputnumber-button-up p-button p-button-icon-only p-component"
        tabindex="-1"
        type="button"
      >
        <span
          class="p-button-icon pi pi-angle-up"
        />
      </button>
      <button
        class="p-inputnumber-button p-inputnumber-button-down p-button p-button-icon-only p-component"
        tabindex="-1"
        type="button"
      >
        <span
          class="p-button-icon pi pi-angle-down"
        />
      </button>
    </span>
  </span>
</div>
`;

exports[`JsonWidget > renders empty 1`] = `
<div>
  <div
    class="blong-json-widget"
  >
    <textarea
      class="p-inputtextarea p-inputtext p-component p-inputtextarea-resizable blong-json-input "
      id="testField"
      rows="6"
      style="overflow: hidden; height: 0px;"
    />
    <button
      class="p-button p-component p-button-text p-button-sm blong-json-format p-button-icon-only"
      type="button"
    >
      <span
        class="p-button-icon p-c pi pi-align-left"
      />
      <span
        class="p-button-label p-c"
      >
         
      </span>
    </button>
  </div>
</div>
`;

exports[`JsonWidget > renders with object value 1`] = `
<div>
  <div
    class="blong-json-widget"
  >
    <textarea
      class="p-inputtextarea p-inputtext p-component p-filled p-inputtextarea-resizable blong-json-input "
      id="testField"
      rows="6"
      style="overflow: hidden; height: 0px;"
    >
      {
  "key": "value",
  "num": 42
}
    </textarea>
    <button
      class="p-button p-component p-button-text p-button-sm blong-json-format p-button-icon-only"
      type="button"
    >
      <span
        class="p-button-icon p-c pi pi-align-left"
      />
      <span
        class="p-button-label p-c"
      >
         
      </span>
    </button>
  </div>
</div>
`;

exports[`MultiSelectWidget > renders 1`] = `
<div>
  <div
    class="p-multiselect p-component p-inputwrapper p-multiselect-chip blong-multiselect w-full "
    data-testid="testField"
  >
    <div
      class="p-hidden-accessible"
    >
      <input
        id="testField"
        readonly=""
        role="listbox"
        tabindex="0"
        type="text"
      />
    </div>
    <div
      class="p-multiselect-label-container"
    >
      <div
        class="p-multiselect-label p-placeholder"
      >
        Select…
      </div>
    </div>
    <div
      class="p-multiselect-trigger"
    >
      <span
        class="p-multiselect-trigger-icon p-c pi pi-chevron-down"
      />
    </div>
  </div>
</div>
`;

exports[`NumberWidget > renders 1`] = `
<div>
  <span
    class="p-inputnumber p-component p-inputwrapper blong-number w-full "
  >
    <input
      class="p-inputtext p-component p-filled p-inputnumber-input text-right"
      id="testField"
      inputmode="numeric"
      name="testField"
      role="spinbutton"
      type="text"
      value="0"
    />
  </span>
</div>
`;

exports[`NumberWidget > renders with value and bounds 1`] = `
<div>
  <span
    class="p-inputnumber p-component p-inputwrapper p-inputwrapper-filled blong-number w-full "
  >
    <input
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="42"
      class="p-inputtext p-component p-filled p-inputnumber-input text-right"
      id="testField"
      inputmode="numeric"
      max="100"
      min="0"
      name="testField"
      role="spinbutton"
      type="text"
      value="42"
    />
  </span>
</div>
`;

exports[`PasswordWidget > renders 1`] = `
<div>
  <div
    class="p-password p-component p-inputwrapper p-input-icon-right blong-password w-full "
  >
    <input
      class="p-inputtext p-component p-password-input w-full"
      id="testField"
      name="testField"
      role="textbox"
      type="password"
      value=""
    />
    <i
      class="pi pi-eye"
    />
  </div>
</div>
`;

exports[`PasswordWidget > renders with value 1`] = `
<div>
  <div
    class="p-password p-component p-inputwrapper p-inputwrapper-filled p-input-icon-right blong-password w-full "
  >
    <input
      class="p-inputtext p-component p-filled p-password-input w-full"
      id="testField"
      name="testField"
      role="textbox"
      type="password"
      value="secret"
    />
    <i
      class="pi pi-eye"
    />
  </div>
</div>
`;

exports[`SelectWidget > renders disabled 1`] = `
<div>
  <div
    class="blong-select-wrapper"
    data-testid="testField"
    id="testField"
  >
    <div
      class="p-selectbutton p-buttonset p-component blong-select"
      role="group"
    />
  </div>
</div>
`;

exports[`SelectWidget > renders with options 1`] = `
<div>
  <div
    class="blong-select-wrapper"
    data-testid="testField"
    id="testField"
  >
    <div
      class="p-selectbutton p-buttonset p-component blong-select"
      role="group"
    >
      <div
        aria-label="A"
        aria-pressed="true"
        class="p-button p-component p-highlight"
        role="button"
        tabindex="0"
      >
        <span
          class="p-button-label p-c"
        >
          A
        </span>
      </div>
      <div
        aria-label="B"
        aria-pressed="false"
        class="p-button p-component"
        role="button"
        tabindex="0"
      >
        <span
          class="p-button-label p-c"
        >
          B
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextWidget > renders 1`] = `
<div>
  <span
    class="blong-input-wrapper w-full"
  >
    <input
      class="p-inputtext p-component blong-input w-full "
      id="testField"
      name="testField"
      value=""
    />
  </span>
</div>
`;

exports[`TextWidget > renders readOnly 1`] = `
<div>
  <span
    class="blong-input-wrapper w-full"
  >
    <input
      class="p-inputtext p-component p-filled blong-input w-full "
      id="testField"
      name="testField"
      readonly=""
      value="readonly"
    />
  </span>
</div>
`;

exports[`TextWidget > renders with copy button 1`] = `
<div>
  <span
    class="blong-input-wrapper w-full"
  >
    <input
      class="p-inputtext p-component p-filled blong-input w-full "
      id="testField"
      name="testField"
      value="hello"
    />
    <button
      class="p-button p-component p-button-text p-button-sm blong-input-copy p-button-icon-only"
      type="button"
    >
      <span
        class="p-button-icon p-c pi pi-copy"
      />
      <span
        class="p-button-label p-c"
      >
         
      </span>
    </button>
  </span>
</div>
`;

exports[`TextWidget > renders with error 1`] = `
<div>
  <span
    class="blong-input-wrapper w-full"
  >
    <input
      class="p-inputtext p-component blong-input w-full p-invalid"
      id="testField"
      name="testField"
      value=""
    />
  </span>
</div>
`;

exports[`TextareaWidget > renders 1`] = `
<div>
  <textarea
    class="p-inputtextarea p-inputtext p-component p-inputtextarea-resizable blong-textarea w-full "
    id="testField"
    name="testField"
    rows="3"
    style="overflow: hidden; height: 0px;"
  />
</div>
`;

exports[`TextareaWidget > renders with value 1`] = `
<div>
  <textarea
    class="p-inputtextarea p-inputtext p-component p-filled p-inputtextarea-resizable blong-textarea w-full "
    id="testField"
    maxlength="200"
    name="testField"
    rows="3"
    style="overflow: hidden; height: 0px;"
  >
    Long text here
  </textarea>
</div>
`;

exports[`TimeWidget > renders 1`] = `
<div>
  <span
    class="p-calendar p-component p-inputwrapper blong-time w-full  p-calendar-w-btn p-calendar-w-btn-right p-calendar-timeonly"
  >
    <input
      autocomplete="off"
      class="p-inputtext p-component"
      id="testField"
      type="text"
    />
    <button
      class="p-button p-component p-datepicker-trigger p-button-icon-only"
      tabindex="-1"
      type="button"
    >
      <span
        class="p-button-icon p-c pi pi-calendar"
      />
      <span
        class="p-button-label p-c"
      >
         
      </span>
    </button>
  </span>
</div>
`;
